fixed h1 on mobile version

--- a/frontend/src/styles/_shared.css
+++ b/frontend/src/styles/_shared.css
@@ -144,6 +144,10 @@ form {
     .pageBody{
         padding: 0px;
     }
+    .pageBody h1 {
+        margin-right: 55px;
+        font-size: x-large;
+    }
 }
 
 @media (min-width: 600px) {
